--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/logo.png" />
+  <link rel="icon" type="image/png" href="./img/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
@@ -18,7 +18,7 @@
     href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;600;700&family=Roboto:wght@400;500;700&display=swap"
     rel="stylesheet">
   <!-- Font Family Link End -->
-  <title> logoipsum'</title>
+  <title>Ashour's Portfolio</title>
 </head>
 
 <body>
